--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+
+
 body{
     margin: 0;
     padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 ul{
@@ -14,13 +19,21 @@ a{
     color: #E5E7EB;
 }
 
-button{
+.hero button{
     margin: 0;
     padding: 6px 25px;
     border: none;
     background-color: #3882F6;
     color: #E5E7EB;
     border-radius: 6px;
+}
+
+.section-one,
+.section-two,
+.section-three,
+.section-four,
+.footer{
+    flex: 1;
 }
 
 .section-one{
@@ -72,4 +85,91 @@ button{
     background-color: grey;
     height: 200px;
     width: 500px;
+}
+
+.section-two{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box{
+    border: 2px solid blue;
+    border-radius: 6px;
+    height: 100px;
+    width: 100px;
+}
+
+.title{
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.cards{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    width: 60px;
+    text-align: center;
+}
+
+.section-three{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #E5E7EB;
+}
+
+.container{
+    width: 1000px;
+}
+
+.quote{
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+    
+}
+
+.author{
+    font-weight: bold;
+    font-size: 18px;
+    text-align: end;
+}
+
+.section-four{
+    display: flex;
+    justify-content: center;
+}
+
+.sign-up-card{
+    background-color: #3882F6;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 8px;
+    margin: 24px;
+    width: 800px;
+}
+
+.sign-up-card p{
+    color: #F9FAF8;
+}
+
+.sign-up-card button{
+    color: #F9FAF8;
+    border: 1px solid #F9FAF8;
+    background-color: #3882F6;
+    border-radius: 6px;
+    padding: 4px 16px;
+}
+
+.footer{
+    background-color: #1F2937;
+    color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
